Fixed table error It used to overflow on bigger screens

--- a/boat/style.less
+++ b/boat/style.less
@@ -528,11 +528,14 @@ footer {
 			background-image: url(images/light/table-bg-light.svg);
 			background-repeat: no-repeat;
 			background-position: center;
+			background-size: cover;
 			border-radius: 30px;
 			padding: 20px;
 
 			display: flex;
 			align-items: center;
+			width: 70%;
+			min-width: 1400px;
 
 			table {
 				background-color: #000;
